Fix editor horizontal scrollbar

--- a/_css/_editor.scss
+++ b/_css/_editor.scss
@@ -13,6 +13,7 @@
   pre {
     border: none;
     margin: 0;
+    overflow: inherit;
   }
 
   .nav-tabs > li > a {
